# trmnl-bouldering

./: .gitignore  .trmnlp.yml  LICENSE  README.md
.github/workflows/: worker-deploy.yml
src/: full.liquid  half_horizontal.liquid  half_vertical.liquid  quadrant.liquid  settings.yml
worker-rs/: Cargo.toml  setup.sh  wrangler.toml
worker-rs/src/: lib.rs
