[package]
name = "trmnl-bouldering-worker"
version = "0.1.0"
edition = "2021"
authors = [ "Tyler Quinlivan" ]
license = "MIT"

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0" }
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
serde = "1.0.219"
reqwest = "0.12.19"
scraper = "0.23.1"
regex = "1.11.1"
json5 = "0.4.1"

[profile.release]
lto = true
strip = true
codegen-units = 1
